# ink

./: CONTROL  Li3Sb.vasp  README.md  pyproject.toml  vasp_config.yaml
data/: POSCAR
src/: __init__.py  main.py
src/amset/: __init__.py
src/ink/: __init__.py
src/ink/ShengBTE/: __init__.py  control.py
src/ink/amset/: __init__.py  settings.py
src/ink/dotfiles/: __init__.py
src/ink/dotfiles/dotbot_config/: unix.yaml  windows.yaml
src/ink/dotfiles/shell/nushell/: config.nu
src/ink/dotfiles/shell/zsh/: zshrc
src/ink/dotfiles/shell/zsh/oh-my-zsh/: .gitignore
src/ink/dotfiles/wezterm/: wezterm.lua
src/ink/tools/: ShengBTE.py  __init__.py  amset.yaml  collect_dfts.py
src/ink/vasp/: POTCAR  jobs.py  main.py  vasp_config.yaml
src/ink/vasp/relax/: INCAR  jobscript.sh
src/sciplots/datakit/: __init__.py
src/sciplots/datakit/alamode_eggs/: ExportALM.py
src/sciplots/datakit/lobster_eggs/: ExportLobster.py  __init__.py
src/sciplots/datakit/lobster_eggs/data/: COHPCAR.lobster
src/sciplots/datakit/phonopy_eggs/: 2nd  3nd  ExportPhonopy.py  README_FC.md  __init__.py  config_example.json  force_constants.fcp  force_constants_calc.py  phonopy_calculator.py  requirements_fc.txt
src/sciplots/datakit/phonopy_eggs/data/: FORCE_SETS  POSCAR  phonopy.yaml  phonopy_disp.yaml  thermal_displacements.yaml
src/sciplots/datakit/shengbte_eggs/: ExportBTE.py
src/sciplots/datakit/shengbte_eggs/data/3rd/: 2nd_f_300K.xml  BTE.KappaTensorVsT_CONV  BTE.KappaTensorVsT_RTA  (+23 more)
src/sciplots/styles/: __init__.py  stylesheets.py
src/shengbte/: __init__.py  control.py  setup.py
src/vasp/: __init__.py
src/vasp/potcar/: __init__.py
(+84 files in other folders)
