[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.26.0",
    "f90nml>=1.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pymatgen>=2025.10.7",
    "pyyaml>=6.0.3",
    "seekpath>=2.1.0",
    "typer>=0.20.0",
]

[project.scripts]
ink = "ink.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src" = "ink"
